# backlight-applet

./: .gitignore  AUTHORS  README  autogen.sh  configure.ac
po/po.bk/: POTFILES
src/: Makefile.am  backlight.c
